# FastAPI-Project

./: main.py  pyproject.toml
ragquestionanswering/: QA.ipynb  main.py  pyproject.toml
