[project]
name = "ragquestionanswering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.12.0",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "pypdf>=6.1.3",
    "sentence-transformers>=5.1.2",
]
